# ms_fastapi

./: .gitignore  .gitmodules  CHANGELOG.md  CI-CD.md  CODEOWNERS  Dockerfile  Dockerfile.datadog  Dockerfile.milestones_api  Dockerfile.milestones_api_v1  Dockerfile.milestones_api_v2  Dockerfile.nginx  LINTING.md  README-old.md  README.md  alembic.ini  build.sh  clark.md  cp-dev.sh  cp-swarm.sh  create_rails_jwt.py  cronilator.py  datadog.yaml  debug.sh  docker-compose-dev.yml  docker-compose-hosted.yml  docker-compose-queue.yml  docker-compose.debug.yml  docker-compose.yml  docker-milestones-api-swarm.yml  docker-milestones-swarm.yml  docker-swarm.yml  hard-restart.sh  linter.sh  makefile  milestones-nginx.conf  prestart.sh  pull_request_template.md  pyproject.toml  reqs.txt  requirements.txt  (+12 more)
.github/vpn/: config-prod.ovpn  config.ovpn
.github/workflows/: build.yml  deploy-swarm-stacks.yml  deploy-swarm-v3.yml  deploy-swarm.yml  deploy.yml  force-build.yml  linting.yml  main.yml  pull-request.yml  release.yml  tag-release-v2.yml  tbd-v0.yml  tbd-v1.yml  trigger-build.yml
Docker/: Dockerfile.localstack_localhost  Dockerfile.milestones_api_deprecated  Dockerfile.milestones_api_hosted  Dockerfile.milestones_api_localhost  Dockerfile.milestones_api_swarm  Dockerfile.milestones_db  Dockerfile.nginx  crontab  entrypoint_beanstalkd.sh  entrypoint_hosted.sh  entrypoint_localhost.sh  entrypoint_swarm.sh  localstack_ip.sh  localstack_ready.sh
Docker/deprecated/: Dockerfile.nginx  cp-dev.sh  datadog.yaml  docker-compose-hosted.yml  docker-galera-swarm.yml  prestart.sh  run-galera-swarm.sh  secrets.txt
app/: api_routes.py  exceptions.py  main.py  middleware.py  producer.py
app/Utilities/: GeomEnum.py  Helpers.py  PositiveNumbers.py  Struct.py  __init__.py  xmltodict.py
app/actions/: base_actions.py  base_actions_.py  (+3 more)
migrations/: dump-test.sh  env.py  milestones_nodata_v1.4.1.sql  milestones_nodata_v1.4.2.sql  milestones_nodata_v1.4.3.sql  milestones_nodata_v1.9.1.sql  milestones_nodata_v1.9.2.sql  milestones_nodata_v1.9.3.sql
src/: app.py  app_routers.py  reqs.txt
tests/: Milestones_Users.postman_collection.json  conftest.py  postman.sh  testutil.py
(+626 files in other folders)
