[project]
requires-python = ">=3.11"         # Support Python 3.11+.

[tool.ruff]
# E501 is to avoid checking for line-length violations
# UP007 is to avoid checking for `X | Y` type annotations
# Q000 is to avoid checking for quotes
ignore = ["E501", "UP007", "Q000"]

select = [
  "E",                             # pycodestyle
  "F",                             # pyflakes
  "UP",                            # pyupgrade
  "Q",                             # flake8 quotes
  "FIX"                            # flake8-fixme
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]           # Ignore `F401` violations in any __init__.py file
